tests/rules/samples/ko_too_many_arg.c
static void	test(int (*f)(void *z), int a, int b, int c, int d, int e)
{
	return ;
}
